--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,9 @@
     "action": {
       "default_popup": "popup.html",
       "default_icon": "assets/icon.png"
+    },
+    "content_security_policy": {
+      "extension_pages": "script-src 'self'; object-src 'self'"
     }
   }
   
